# clipvault-personal

./: .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md
desktop/: pyproject.toml
desktop/clipvault/: __init__.py  config.py  instance_lock.py  interprocess_lock.py  launcher.py  main.py  service.py
desktop/clipvault/api/: __init__.py  handlers.py  server.py
desktop/clipvault/application/: __init__.py  (+1 more)
desktop/packaging/: Build-LgplRelinkKit.ps1  Export-WheelNotices.ps1  pillow_feature_probe.py  repack_pystray_wheel.py  run_clipvault.py  windows-release-requirements.txt
desktop/tests/: conftest.py  test_actions.py  test_android_privacy_manifest.py  test_api.py  test_api_current_secret_guard.py  test_api_request_lifecycle.py  test_application_boundaries.py  test_backup.py  test_backup_ack_repo.py  test_backup_cancellation.py  test_backup_concurrency.py  test_backup_crash_safe.py  test_backup_git.py  test_backup_jsonl_atomic.py  test_backup_recovery.py  test_backup_release.py  test_backup_repo_lock.py  test_benchmark_desktop_perf.py  test_bump_version.py  test_check_pr_issue_hygiene.py  test_clipboard_privacy_probe.py  test_config.py  test_core_purity.py  test_db_startup.py  test_download_field_test_artifacts.py  test_field_test_evidence.py  test_field_test_readiness.py  test_fts_cjk.py  test_fts_search_map.py  test_ingest.py  test_instance_lock.py  test_launcher.py  test_main_cli.py  test_manual_qa_evidence.py  test_memory.py  test_memory_atomicity.py  test_memory_sync.py  test_migration_lock.py  test_normalize.py  test_obsidian_queue.py  (+30 more)
(+243 files in other folders)
